--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!--
+Henry Houghton
+LectureLink
+First built April 19, 2025
+Message lecturelinkteam@gmail.com for opportunities
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -37,15 +44,13 @@
       width: auto;
       border-radius: 10px;
     }
-    nav {
-      display: flex;
-      align-items: center;
+    .logo-link {
+      display: inline-block;
     }
     nav a {
       color: white;
       text-decoration: none;
       margin: 20px;
-      font-size: medium;
       position: relative;
       display: inline-block;
       padding-bottom: 4px;
