--- a/join.html
+++ b/join.html
@@ -1,100 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Terms of Service</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-    }
-    body {
-      display: flex;
-      flex-direction: column;
-      background: linear-gradient(to bottom right, #000000, #411111);
-      font-family: Arial, sans-serif;
-      position: relative;
-      color: white;
-    }
-    .topbar {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      right: 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    .logo-link {
-      display: inline-block;
-    }
-    .logo-link img {
-      height: 60px;
-      width: auto;
-      border-radius: 10px;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin-left: 20px;
-      font-weight: bold;
-      position: relative;
-      display: inline-block;
-      padding-bottom: 4px;
-    }
-    nav a::before {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 0;
-      height: 2px;
-      background-color: #ffffff;
-      transition: width 0.3s ease;
-    }
-    nav a:hover::before {
-      width: 100%;
-    }
-    .content {
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      padding: 20px;
-      margin-top: 100px;
-    }
-    .pdf-container {
-      width: 100%;
-      height: 100%;
-      max-height: calc(100vh - 140px);
-    }
-    .pdf-container embed {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-  </style>
-</head>
-<body>
-  <div class="topbar">
-    <a href="index.html" class="logo-link">
-      <img src="logo.png" alt="Logo">
-    </a>
-    <nav>
-        <a href="team.html">Team</a>
-        <a href="privacy.html">Privacy Policy</a>
-        <a href="terms.html">Terms of Service</a>
-        <a href="join.html">Join Us</a>
-      </nav>
-  </div>
 
-  <div class="content">
-    <div class="pdf-container">
-      <embed src="LectureLinkPrivacyPolicy.pdf" type="application/pdf">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terms of Service</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <style>
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+            background: linear-gradient(to bottom right, #000000, #411111);
+            font-family: Arial, sans-serif;
+            position: relative;
+            color: white;
+        }
+
+        .topbar {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            right: 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .logo-link {
+            display: inline-block;
+        }
+
+        .logo-link img {
+            height: 60px;
+            width: auto;
+            border-radius: 10px;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 20px;
+            position: relative;
+            display: inline-block;
+            padding-bottom: 4px;
+        }
+
+        nav a::before {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background-color: #ffffff;
+            transition: width 0.3s ease;
+        }
+
+        nav .separator {
+            color: white;
+            margin: 0 10px;
+            font-size: medium;
+        }
+
+        nav a:hover::before {
+            width: 100%;
+        }
+
+        .content {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            padding: 20px;
+            margin-top: 100px;
+        }
+
+        .pdf-container {
+            width: 100%;
+            height: 100%;
+            max-height: calc(100vh - 140px);
+        }
+
+        .pdf-container embed {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="topbar">
+        <a href="index.html" class="logo-link">
+            <img src="logo.png" alt="Logo">
+        </a>
+        <nav>
+            <a href="team.html">Team</a>
+            <span class="separator">|</span>
+            <a href="privacy.html">Privacy Policy</a>
+            <span class="separator">|</span>
+            <a href="terms.html">Terms of Service</a>
+            <span class="separator">|</span>
+            <a href="join.html">Join Us</a>
+        </nav>
     </div>
-  </div>
+
+    <div class="content">
+        <div class="pdf-container">
+            <embed src="LectureLinkPrivacyPolicy.pdf" type="application/pdf">
+        </div>
+    </div>
 </body>
+
 </html>
