--- a/privacy.html
+++ b/privacy.html
@@ -39,8 +39,7 @@
     nav a {
       color: white;
       text-decoration: none;
-      margin-left: 20px;
-      font-weight: bold;
+      margin: 20px;
       position: relative;
       display: inline-block;
       padding-bottom: 4px;
@@ -57,6 +56,11 @@
     }
     nav a:hover::before {
       width: 100%;
+    }
+    nav .separator {
+      color: white;
+      margin: 0 10px;
+      font-size: medium;
     }
     .content {
       flex: 1;
@@ -85,8 +89,11 @@
     </a>
     <nav>
       <a href="team.html">Team</a>
+      <span class="separator">|</span>
       <a href="privacy.html">Privacy Policy</a>
+      <span class="separator">|</span>
       <a href="terms.html">Terms of Service</a>
+      <span class="separator">|</span>
       <a href="join.html">Join Us</a>
     </nav>
   </div>
