adding more styling

--- a/team.html
+++ b/team.html
@@ -35,10 +35,6 @@
             width: auto;
             border-radius: 10px;
         }
-        nav {
-            display: flex;
-            align-items: center;
-        }
         nav a {
             color: white;
             text-decoration: none;
@@ -46,7 +42,6 @@
             position: relative;
             display: inline-block;
             padding-bottom: 4px;
-            font-size: medium;
         }
         nav a::before {
             content: '';
@@ -74,6 +69,7 @@
             min-height: 100vh;
             padding: 150px 20px 100px 0px;
             box-sizing: border-box;
+            overflow: hidden;
             /* padding-bottom: 200px; */
         }
         h1 {
@@ -98,7 +94,7 @@
             transition: transform 0.3s ease;
         }
         .profile:hover {
-            transform: translateY(-5px);
+            transform: translateY(-10px);
         }
         .profile img {
             width: 150px;
@@ -170,7 +166,7 @@
                 <img src="founder2.jpg" alt="Image Coming Soon">
                 <h3>Sumner Roberts</h3>
                 <p>Co-Founder</p>
-                <p>With experience on presidential campaigns and a semester working in the White House, Sumner spearheads LectureLink's growth and marketing with respect to the social and political environment.</p>
+                <p>With experience on presidential campaigns and a semester working in the White House, Sumner spearheads LectureLink's growth and marketing.</p>
                 <a href="https://www.linkedin.com/in/sumnerroberts/" target="_blank">LinkedIn</a>
             </div>
             <div class="profile">
