--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       align-items: center;
       justify-content: center;
       padding: 2rem;
-      padding-top: 100px;
+      padding-top: 200px;
       margin-top: 60px;
       margin-bottom: 80px;
     }
@@ -308,7 +308,7 @@
   <main>
     <div class="hero">
       <h1>LectureLink</h1>
-      <p class="tagline">Study smarter, together</p>
+      <p class="tagline"><i>Study smarter, together</i></p>
       <a href="https://apps.apple.com/us/app/lecturelink/id6744894821" class="app-store-link">
         <img src="onappstore.png" alt="Download on the App Store" class="app-store-img">
       </a>
@@ -316,7 +316,7 @@
   </main>
   
   <section class="partners-section">
-    <h2 class="partners-title">Trusted by Students and Educators</h2>
+    <h2 class="partners-title">Connect with students at</h2>
     
     <div class="slider-container schools-slider">
       <div class="schools-track schools-track-animate" id="schools-track">
@@ -352,7 +352,7 @@
   
   <script>
     const schools = [
-      { img: "https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/Cornell_University_seal.svg/1200px-Cornell_University_seal.svg.png", alt: "Cornell University" },
+      { img: "images/cornell", alt: "Cornell University" },
       { img: "https://upload.wikimedia.org/wikipedia/en/thumb/0/0c/University_of_Florida_seal.svg/1200px-University_of_Florida_seal.svg.png", alt: "University of Florida" },
       { img: "https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Auburn_University_seal.svg/1200px-Auburn_University_seal.svg.png", alt: "Auburn University" },
       { img: "https://upload.wikimedia.org/wikipedia/en/thumb/b/bf/Santa_Clara_U_Seal.svg/1200px-Santa_Clara_U_Seal.svg.png", alt: "Santa Clara University" },
