--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
   
   <script>
     const schools = [
-      { img: "images/cornell", alt: "Cornell University" },
+      { img: "https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/Cornell_University_seal.svg/1200px-Cornell_University_seal.svg.png", alt: "Cornell University" },
       { img: "https://upload.wikimedia.org/wikipedia/en/thumb/0/0c/University_of_Florida_seal.svg/1200px-University_of_Florida_seal.svg.png", alt: "University of Florida" },
       { img: "https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Auburn_University_seal.svg/1200px-Auburn_University_seal.svg.png", alt: "Auburn University" },
       { img: "https://upload.wikimedia.org/wikipedia/en/thumb/b/bf/Santa_Clara_U_Seal.svg/1200px-Santa_Clara_U_Seal.svg.png", alt: "Santa Clara University" },
@@ -363,7 +363,7 @@
       { img: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Ohio_State_University_seal.svg/1200px-Ohio_State_University_seal.svg.png", alt: "Ohio State University" },
       { img: "https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/University_of_Michigan_seal.svg/1200px-University_of_Michigan_seal.svg.png", alt: "University of Michigan" },
       { img: "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/Northwestern_University_Seal.svg/1200px-Northwestern_University_Seal.svg.png", alt: "Northwestern University" },
-      { img: "https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/University_of_Alabama_seal.svg/1200px-University_of_Alabama_seal.svg.png", alt: "University of Alabama" },
+      { img: "https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/University_of_Miami_seal.svg/1200px-University_of_Miami_seal.svg.png", alt: "University of Miami" },
       { img: "https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/LSU_Athletics_logo.svg/1200px-LSU_Athletics_logo.svg.png", alt: "LSU" }
     ];
     
