--- a/index.html
+++ b/index.html
@@ -327,13 +327,13 @@
     <div class="companies-section">
       <div class="companies-container">
         <div class="logo-item">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/MIT_logo.svg/2560px-MIT_logo.svg.png" alt="MIT OpenCourseWare">
+          <img src="images/mitocw.png" alt="MIT OpenCourseWare">
         </div>
         <div class="logo-item">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Khan_Academy_Logo_%28new_2018%29.svg/2560px-Khan_Academy_Logo_%28new_2018%29.svg.png" alt="Khan Academy">
+          <img src="images/khanacademy.png" alt="Khan Academy">
         </div>
         <div class="logo-item">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/Coursera_logo.svg/2560px-Coursera_logo.svg.png" alt="Coursera">
+          <img src="images/coursera.png" alt="Coursera">
         </div>
       </div>
     </div>
@@ -352,19 +352,17 @@
   
   <script>
     const schools = [
-      { img: "https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/Cornell_University_seal.svg/1200px-Cornell_University_seal.svg.png", alt: "Cornell University" },
-      { img: "https://upload.wikimedia.org/wikipedia/en/thumb/0/0c/University_of_Florida_seal.svg/1200px-University_of_Florida_seal.svg.png", alt: "University of Florida" },
-      { img: "https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Auburn_University_seal.svg/1200px-Auburn_University_seal.svg.png", alt: "Auburn University" },
-      { img: "https://upload.wikimedia.org/wikipedia/en/thumb/b/bf/Santa_Clara_U_Seal.svg/1200px-Santa_Clara_U_Seal.svg.png", alt: "Santa Clara University" },
-      { img: "https://upload.wikimedia.org/wikipedia/en/thumb/e/ef/Chapman_University_seal.svg/1200px-Chapman_University_seal.svg.png", alt: "Chapman University" },
-      { img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Texas_A%26M_University_seal.svg/1200px-Texas_A%26M_University_seal.svg.png", alt: "Texas A&M University" },
-      { img: "https://upload.wikimedia.org/wikipedia/en/thumb/6/6b/Syracuse_University_seal.svg/1200px-Syracuse_University_seal.svg.png", alt: "Syracuse University" },
-      { img: "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Duke_University_Crest.svg/1200px-Duke_University_Crest.svg.png", alt: "Duke University" },
-      { img: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Ohio_State_University_seal.svg/1200px-Ohio_State_University_seal.svg.png", alt: "Ohio State University" },
-      { img: "https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/University_of_Michigan_seal.svg/1200px-University_of_Michigan_seal.svg.png", alt: "University of Michigan" },
-      { img: "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/Northwestern_University_Seal.svg/1200px-Northwestern_University_Seal.svg.png", alt: "Northwestern University" },
-      { img: "https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/University_of_Miami_seal.svg/1200px-University_of_Miami_seal.svg.png", alt: "University of Miami" },
-      { img: "https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/LSU_Athletics_logo.svg/1200px-LSU_Athletics_logo.svg.png", alt: "LSU" }
+      { img: "images/georgiatech.png", alt: "Georgia Tech" },
+      { img: "images/uf.png", alt: "University of Florida" },
+      { img: "images/auburn.png", alt: "Auburn University" },
+      { img: "images/santaclara.png", alt: "Santa Clara University" },
+      { img: "images/duke.png", alt: "Duke University" },
+      { img: "images/texasam.png", alt: "Texas A&M University" },
+      { img: "images/syracuse.png", alt: "Syracuse University" },
+      { img: "images/ohiostate.png", alt: "Ohio State University" },
+      { img: "images/michigan.png", alt: "University of Michigan" },
+      { img: "images/miami.png", alt: "University of Miami" },
+      { img: "images/lsu.png", alt: "LSU" }
     ];
     
     const schoolsTrack = document.getElementById('schools-track');
