--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
     const schools = [
       { img: "images/georgiatech.png", alt: "Georgia Tech" },
       { img: "images/uf.png", alt: "University of Florida" },
+      { img: "images/cornell.png", alt: "Cornell University" },
       { img: "images/auburn.png", alt: "Auburn University" },
       { img: "images/santaclara.png", alt: "Santa Clara University" },
       { img: "images/duke.png", alt: "Duke University" },
@@ -368,7 +369,7 @@
     const schoolsTrack = document.getElementById('schools-track');
     
     // Create three sets of schools for seamless looping
-    for (let i = 0; i < 3; i++) {
+    for (let i = 0; i < 5; i++) {
       schools.forEach(school => {
         const logoItem = document.createElement('div');
         logoItem.className = 'logo-item';
