--- a/team.html
+++ b/team.html
@@ -291,7 +291,7 @@
           With years of experience writing scalable, high-performance code and a degree from Cornell University in Data Science, Henry leads the development and business operations of LectureLink.
         </p>
         <div class="member-links">
-          <a href="https://www.linkedin.com/in/henry-houghton-779211162/" target="_blank" class="linkedin-link">
+          <a href="https://www.linkedin.com/in/henry-houghton/" target="_blank" class="linkedin-link">
             LinkedIn
           </a>
         </div>
@@ -322,7 +322,7 @@
         <h2 class="member-name">India Houghton</h2>
         <p class="member-role">Chief Design Officer</p>
         <p class="member-bio">
-          With a degree in Science, Technology, and Society from Stanford University, India leverages current market trends to bring cutting-edge designs to LectureLink. India currently also plays professional tennis.
+          With a degree in Science, Technology, and Society from Stanford University, India leverages current market trends to bring cutting-edge designs to LectureLink. India currently plays on the University of Florida Women's Tennis Team.
         </p>
         <div class="member-links">
           <a href="https://www.linkedin.com/in/india-houghton/" target="_blank" class="linkedin-link">
