--- a/index.html
+++ b/index.html
@@ -296,9 +296,12 @@
 <body>
   <header>
     <nav>
-      <img src="logo.png" alt="LectureLink" class="logo">
+      <a href="index.html">
+        <img src="logo.png" alt="LectureLink" class="logo">
+      </a>
       <div class="nav-links">
         <a href="index.html">Home</a>
+        <a href="about.html">About</a>
         <a href="opportunities.html">Opportunities</a>
         <a href="team.html">Team</a>
       </div>
@@ -316,7 +319,7 @@
   </main>
   
   <section class="partners-section">
-    <h2 class="partners-title">Connect with students at</h2>
+    <h2 class="partners-title">Connect with fellow students at</h2>
     
     <div class="slider-container schools-slider">
       <div class="schools-track schools-track-animate" id="schools-track">
