--- a/opportunities.html
+++ b/opportunities.html
@@ -457,6 +457,7 @@
       </a>
       <div class="nav-links">
         <a href="index.html">Home</a>
+        <a href="about.html">About</a>
         <a href="opportunities.html" class="active">Opportunities</a>
         <a href="team.html">Team</a>
       </div>
