--- a/team.html
+++ b/team.html
@@ -267,6 +267,7 @@
       </a>
       <div class="nav-links">
         <a href="index.html">Home</a>
+        <a href="about.html">About</a>
         <a href="opportunities.html">Opportunities</a>
         <a href="team.html" class="active">Team</a>
       </div>
