--- a/about.html
+++ b/about.html
@@ -143,6 +143,21 @@
       direction: ltr;
     }
 
+    .section-image {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .section-image img {
+      width: 100%;
+      max-width: 500px;
+      height: auto;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      object-fit: cover;
+    }
+
     .section-text h2 {
       font-size: 2rem;
       font-weight: 700;
@@ -332,6 +347,9 @@
           <p>Our AI-powered matching algorithm connects you with study partners who share your courses, learning style, and schedule. No more studying alone or struggling to find the right group.</p>
           <p>Whether you're tackling complex problem sets or preparing for exams, LectureLink ensures you have the support you need when you need it.</p>
         </div>
+        <div class="section-image">
+          <img src="socratic.png" alt="Intelligent Study Groups">
+        </div>
       </div>
     </section>
 
@@ -389,6 +407,22 @@
           <h2>Privacy & Security First</h2>
           <p>Your data belongs to you. We employ end-to-end encryption for all communications, store minimal personal information, and never share your data with third parties.</p>
           <p>Our platform is FERPA compliant and undergoes regular security audits to ensure your academic information stays protected.</p>
+        </div>
+        <div class="section-image">
+          <img src="security.png" alt="Privacy & Security">
+        </div>
+      </div>
+    </section>
+
+    <section class="about-section">
+      <div class="section-content reverse">
+        <div class="section-image">
+          <img src="worldmap.png" alt="Global Student Network">
+        </div>
+        <div class="section-text">
+          <h2>Connecting Students Worldwide</h2>
+          <p>Join a global network of learners from universities around the world. Our platform breaks down geographical barriers, enabling collaboration across continents and time zones.</p>
+          <p>Share perspectives, exchange knowledge, and build lasting connections with students who share your academic passions, no matter where they are.</p>
         </div>
       </div>
     </section>
