--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LectureLink</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -16,7 +13,7 @@
     }
     
     body {
-      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
       background: #ffffff;
       color: #000000;
       min-height: 100vh;
@@ -97,34 +94,30 @@
       align-items: center;
       justify-content: center;
       padding: 2rem;
-      margin-top: 80px;
+      padding-top: 200px;
+      margin-top: 60px;
+      margin-bottom: 80px;
     }
 
     .hero {
       text-align: center;
-      max-width: 900px;
+      max-width: 800px;
       margin: 0 auto;
     }
 
     h1 {
-      font-size: clamp(3.5rem, 9vw, 6rem);
-      font-weight: 800;
-      letter-spacing: -0.04em;
-      margin-bottom: 1.5rem;
-      line-height: 0.95;
-      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-      background: linear-gradient(135deg, #000 0%, #333 100%);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
+      font-size: clamp(3rem, 8vw, 5rem);
+      font-weight: 700;
+      letter-spacing: -0.03em;
+      margin-bottom: 1rem;
+      line-height: 1.1;
     }
 
     .tagline {
-      font-size: clamp(1.2rem, 2.5vw, 1.6rem);
-      color: #777;
-      margin-bottom: 3.5rem;
+      font-size: clamp(1.1rem, 2.5vw, 1.4rem);
+      color: #666;
+      margin-bottom: 3rem;
       font-weight: 400;
-      letter-spacing: -0.01em;
     }
     
     .app-store-link {
