--- a/about.html
+++ b/about.html
@@ -348,7 +348,7 @@
           <p>Whether you're tackling complex problem sets or preparing for exams, LectureLink ensures you have the support you need when you need it.</p>
         </div>
         <div class="section-image">
-          <img src="socratic.png" alt="Intelligent Study Groups">
+          <img src="images/socratic.png" alt="Intelligent Study Groups">
         </div>
       </div>
     </section>
@@ -409,7 +409,7 @@
           <p>Our platform is FERPA compliant and undergoes regular security audits to ensure your academic information stays protected.</p>
         </div>
         <div class="section-image">
-          <img src="security.png" alt="Privacy & Security">
+          <img src="iamges/security.png" alt="Privacy & Security">
         </div>
       </div>
     </section>
@@ -417,7 +417,7 @@
     <section class="about-section">
       <div class="section-content reverse">
         <div class="section-image">
-          <img src="worldmap.png" alt="Global Student Network">
+          <img src="iamges/worldmap.png" alt="Global Student Network">
         </div>
         <div class="section-text">
           <h2>Connecting Students Worldwide</h2>
