--- a/about.html
+++ b/about.html
@@ -409,7 +409,7 @@
           <p>Our platform is FERPA compliant and undergoes regular security audits to ensure your academic information stays protected.</p>
         </div>
         <div class="section-image">
-          <img src="iamges/security.png" alt="Privacy & Security">
+          <img src="images/security.png" alt="Privacy & Security">
         </div>
       </div>
     </section>
@@ -417,7 +417,7 @@
     <section class="about-section">
       <div class="section-content reverse">
         <div class="section-image">
-          <img src="iamges/worldmap.png" alt="Global Student Network">
+          <img src="images/worldmap.png" alt="Global Student Network">
         </div>
         <div class="section-text">
           <h2>Connecting Students Worldwide</h2>
