--- a/about.html
+++ b/about.html
@@ -151,7 +151,7 @@
 
     .section-image img {
       width: 100%;
-      max-width: 500px;
+      max-width: 400px;
       height: auto;
       border-radius: 12px;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
@@ -354,6 +354,19 @@
     </section>
 
     <section class="about-section">
+      <div class="section-content">
+        <div class="section-image">
+          <img src="images/worldmap.png" alt="Global Student Network">
+        </div>
+        <div class="section-text">
+          <h2>Connecting Students Worldwide</h2>
+          <p>Join a global network of learners from universities around the world. Our platform breaks down geographical barriers, enabling collaboration across continents and time zones.</p>
+          <p>Share perspectives, exchange knowledge, and build lasting connections with students who share your academic passions, no matter where they are.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="about-section">
       <div class="feature-grid">
         <div class="feature-card">
           <div class="feature-icon">📚</div>
@@ -410,19 +423,6 @@
         </div>
         <div class="section-image">
           <img src="images/security.png" alt="Privacy & Security">
-        </div>
-      </div>
-    </section>
-
-    <section class="about-section">
-      <div class="section-content reverse">
-        <div class="section-image">
-          <img src="images/worldmap.png" alt="Global Student Network">
-        </div>
-        <div class="section-text">
-          <h2>Connecting Students Worldwide</h2>
-          <p>Join a global network of learners from universities around the world. Our platform breaks down geographical barriers, enabling collaboration across continents and time zones.</p>
-          <p>Share perspectives, exchange knowledge, and build lasting connections with students who share your academic passions, no matter where they are.</p>
         </div>
       </div>
     </section>
