--- a/about.html
+++ b/about.html
@@ -419,7 +419,7 @@
         <div class="section-text">
           <h2>Privacy & Security First</h2>
           <p>Your data belongs to you. We employ end-to-end encryption for all communications, store minimal personal information, and never share your data with third parties.</p>
-          <p>Our platform is FERPA compliant and undergoes regular security audits to ensure your academic information stays protected.</p>
+          <p>Our platform undergoes regular security audits to ensure your academic and personal information stays protected.</p>
         </div>
         <div class="section-image">
           <img src="images/security.png" alt="Privacy & Security">
